--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
 .bg-color-boolcore {
   padding-top: 10px;
   background-color: #0b121f;
-  background-image: url(../public/img/bg-home.jpg);
+  background-image: url(../img/bg-home.jpg);
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
