--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,24 @@
   min-height: 100vh;
 }
 
+.bg-img-fissi {
+  padding-top: 10px;
+  background-color: #0b121f;
+  background-image: url(../public/img/tech-fissi.jpg);
+}
+.card-top-fissi {
+  background-color: rgba(73, 87, 94, 0.5);
+  border-radius: 10px;
+}
+.card-body-fissi {
+  background-color: rgba(
+    73,
+    87,
+    94,
+    0.9
+  ); /* 0.7 = opacità, puoi variare tra 0.5 e 0.9 */
+}
+
 .bg-color-jumbo {
   background-color: rgba(32, 48, 0, 0.9);
   border: solid 1px rgb(97, 138, 97);
@@ -57,4 +75,10 @@
 .view-toggle {
   padding: 10px 0;
   margin-bottom: 20px;
+}
+
+.decoration-no {
+  list-style: none;
+
+  padding: 5px;
 }
