--- a/src/index.css
+++ b/src/index.css
@@ -71,3 +71,15 @@
   object-fit: cover;
   cursor: pointer;
 }
+
+.product-img-fixed {
+    height: 200px;
+    width: 100%;
+    object-fit: contain;
+}
+
+.img-list {
+  height: 300px;
+  width: 250px;
+  object-fit: contain;
+}
