--- a/src/index.css
+++ b/src/index.css
@@ -13,8 +13,8 @@
   background-image: url(../img/bg-home.jpg);
   background-repeat: no-repeat;
   background-size: contain;
-  background-position: center;
-  background-blend-mode: lighten;
+  background-size: cover;
+
   opacity: 0.9;
   min-height: 100vh;
 }
@@ -84,7 +84,6 @@
   margin-bottom: 20px;
 }
 
-
 .decoration-no {
   list-style: none;
 
@@ -99,9 +98,9 @@
 }
 
 .product-img-fixed {
-    height: 200px;
-    width: 100%;
-    object-fit: contain;
+  height: 200px;
+  width: 100%;
+  object-fit: contain;
 }
 
 .img-list {
@@ -109,4 +108,3 @@
   width: 250px;
   object-fit: contain;
 }
-
